Phase 3: Implement kraken-wasm crate
Complete WASM bindings for browser-based orderbook:

- WasmOrderbook struct with wasm_bindgen exports
- apply_message: Parse raw JSON from WebSocket
- get_bids/get_asks: Return levels as JS arrays
- get_spread/get_mid_price: Market metrics
- History/time-travel: enable_history, get_snapshot_at
- JavaScript-friendly types with serde serialization

Tested: Compiles to wasm32-unknown-unknown target.

--- a/crates/kraken-wasm/Cargo.toml
+++ b/crates/kraken-wasm/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["cdylib", "rlib"]
 kraken-book = { workspace = true }
 kraken-types = { workspace = true }
 wasm-bindgen = { workspace = true }
+serde = { workspace = true }
 serde-wasm-bindgen = { workspace = true }
 console_error_panic_hook = { workspace = true }
 rust_decimal = { workspace = true }
