Phase 5: Implement kraken-sdk crate
High-level SDK for Kraken WebSocket API v2:

- KrakenClientBuilder: Fluent builder for configuration
  - Symbol selection, depth, endpoint, reconnection
  - Subscribe to book, ticker, trade channels
- KrakenClient: Main client interface
  - best_bid, best_ask, spread, mid_price accessors
  - Event stream for real-time updates
  - Orderbook access by symbol
- Prelude module for convenient imports

Usage: KrakenClient::builder(["BTC/USD"])
         .with_depth(Depth::D10)
         .connect()
         .await?

--- a/crates/kraken-sdk/Cargo.toml
+++ b/crates/kraken-sdk/Cargo.toml
@@ -14,3 +14,5 @@ tokio = { workspace = true }
 futures = { workspace = true }
 typed-builder = { workspace = true }
 tracing = { workspace = true }
+rust_decimal = { workspace = true }
+dashmap = { workspace = true }
