Fix checksum validation and add tests/benchmarks
- Fix CRC32 checksum with precision-aware formatting (MIN-143)
- Subscribe to instrument channel for price/qty precision
- Add InstrumentData message type for precision metadata
- Update checksum computation to use precision parameters
- Add integration tests (20 tests in tests/integration.rs)
- Add Criterion benchmarks for parsing and orderbook ops
- Clean up .gitignore and remove unnecessary files
- Fix clippy warnings (derivable Default impls)

All 74 tests passing, live API verified with zero checksum mismatches.

--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,5 @@ coverage/
 node_modules/
 
 # Spec/documentation files (not part of SDK)
-claude.md
-krakenapiv2guide.md
 *.spec.md
-
-# Claude Code
-.claude/
+*.guide.md
