--- a/crates/kraken-book/Cargo.toml
+++ b/crates/kraken-book/Cargo.toml
@@ -18,3 +18,12 @@ thiserror = { workspace = true }
 
 [dev-dependencies]
 rust_decimal_macros = { workspace = true }
+criterion = { workspace = true }
+
+[[bench]]
+name = "parsing"
+harness = false
+
+[[bench]]
+name = "orderbook"
+harness = false
