Build WASM package and update npm package name
- Build kraken-wasm with wasm-pack
- Update package.json name to @kraken-forge/wasm for Track 2 integration
- Add wasm-pack metadata configuration

--- a/crates/kraken-wasm/Cargo.toml
+++ b/crates/kraken-wasm/Cargo.toml
@@ -20,3 +20,10 @@ rust_decimal = { workspace = true }
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ["-O3"]
+
+[package.metadata.wasm-pack.profile.dev]
+wasm-opt = false
+
+# NPM package configuration
+[package.metadata.wasm-pack]
+name = "@kraken-forge/wasm"
