Add automatic token refresh with caching and background refresh
Implement AutoRefreshTokenManager that wraps TokenManager with:
- Token caching with expiry tracking
- Background auto-refresh loop that refreshes before expiry
- Observable token state via watch channels
- Retry logic with exponential backoff
- Configurable refresh buffer and retry parameters

Key types:
- TokenState: NotInitialized, Valid, Refreshing, Expired, Error
- AutoRefreshConfig: configurable refresh parameters
- CachedToken: token with expiry metadata

The auto-refresh loop:
1. Fetches initial token on start
2. Sleeps until refresh buffer before expiry
3. Refreshes token with retry on failure
4. Notifies subscribers of state changes

--- a/crates/kraken-sdk/Cargo.toml
+++ b/crates/kraken-sdk/Cargo.toml
@@ -9,7 +9,7 @@ description = "High-level SDK for Kraken WebSocket API v2"
 [features]
 default = []
 metrics = ["prometheus", "lazy_static"]
-auth = ["reqwest", "hmac", "sha2", "base64"]
+auth = ["reqwest", "hmac", "sha2", "base64", "parking_lot"]
 
 [dependencies]
 kraken-types = { workspace = true }
@@ -33,6 +33,7 @@ reqwest = { version = "0.12", features = ["json"], optional = true }
 hmac = { version = "0.12", optional = true }
 sha2 = { version = "0.10", optional = true }
 base64 = { version = "0.22", optional = true }
+parking_lot = { version = "0.12", optional = true }
 
 [dev-dependencies]
 tracing-subscriber = { workspace = true }
