Add REST API client for trading operations
Implements complete REST API support for Kraken exchange:
- Public endpoints: ticker, orderbook, OHLC, trades, spreads
- Account endpoints: balance, open orders, trade history, positions
- Trading endpoints: add/cancel/edit orders, batch operations
- Funding endpoints: deposits, withdrawals, wallet transfers
- HMAC-SHA512 authentication with secure nonce generation
- Comprehensive order types (market, limit, stop-loss, trailing)
- Full error handling with recovery strategies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/kraken-types",
     "crates/kraken-book",
     "crates/kraken-ws",
+    "crates/kraken-rest",
     "crates/kraken-sdk",
     "crates/kraken-wasm",
 ]
@@ -56,6 +57,7 @@ console_error_panic_hook = "0.1"
 kraken-types = { path = "crates/kraken-types" }
 kraken-book = { path = "crates/kraken-book" }
 kraken-ws = { path = "crates/kraken-ws" }
+kraken-rest = { path = "crates/kraken-rest" }
 kraken-sdk = { path = "crates/kraken-sdk" }
 
 # Benchmarking
