Add Futures WebSocket client for perpetual swaps
Implements complete Futures API support for Kraken derivatives:
- Connection management with automatic reconnection
- Challenge-response authentication for private channels
- Orderbook channel with snapshot/update processing
- Ticker channel with mark price, index price, funding rates
- Trade channel with VWAP calculation and buy/sell ratio
- Position channel with margin monitoring and liquidation alerts
- Support for perpetual (PI_) and fixed maturity (FI_) contracts
- Demo/sandbox endpoint support for testing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "crates/kraken-book",
     "crates/kraken-ws",
     "crates/kraken-rest",
+    "crates/kraken-futures-ws",
     "crates/kraken-sdk",
     "crates/kraken-wasm",
 ]
@@ -58,6 +59,7 @@ kraken-types = { path = "crates/kraken-types" }
 kraken-book = { path = "crates/kraken-book" }
 kraken-ws = { path = "crates/kraken-ws" }
 kraken-rest = { path = "crates/kraken-rest" }
+kraken-futures-ws = { path = "crates/kraken-futures-ws" }
 kraken-sdk = { path = "crates/kraken-sdk" }
 
 # Benchmarking
