Add comprehensive examples for REST, Futures, and market making
- rest_trading.rs: REST API demonstration with public market data
  and authenticated trading operations (balance, orders, validation)
- futures_stream.rs: Futures WebSocket streaming with ticker, book,
  trades, and funding rate tracking for perpetual swaps
- market_maker.rs: L3 orderbook market maker skeleton showing queue
  position tracking, imbalance signals, VWAP calculation, and
  performance benchmarks

--- a/crates/kraken-sdk/Cargo.toml
+++ b/crates/kraken-sdk/Cargo.toml
@@ -38,6 +38,8 @@ parking_lot = { version = "0.12", optional = true }
 [dev-dependencies]
 tracing-subscriber = { workspace = true }
 rust_decimal_macros = { workspace = true }
+kraken-rest = { path = "../kraken-rest" }
+kraken-futures-ws = { path = "../kraken-futures-ws" }
 
 [[example]]
 name = "simple_ticker"
@@ -50,3 +52,12 @@ name = "multi_symbol"
 
 [[example]]
 name = "advanced_reconnect"
+
+[[example]]
+name = "rest_trading"
+
+[[example]]
+name = "futures_stream"
+
+[[example]]
+name = "market_maker"
