--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "crates/kraken-types",
     "crates/kraken-book",
     "crates/kraken-ws",
-    "crates/kraken-rest",
+    "crates/kraken-auth",
     "crates/kraken-futures-ws",
     "crates/kraken-sdk",
     "crates/kraken-wasm",
@@ -32,6 +32,7 @@ tokio = { version = "1", features = ["full"] }
 tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
 futures = "0.3"
 futures-util = "0.3"
+async-trait = "0.1"
 
 # Error handling
 thiserror = "1"
@@ -45,20 +46,31 @@ typed-builder = "0.18"
 dashmap = "5"
 parking_lot = "0.12"
 rand = "0.8"
+chrono = { version = "0.4", features = ["serde"] }
 
 # Checksum
 crc32fast = "1.3"
 
 # WASM
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
 serde-wasm-bindgen = "0.6"
 console_error_panic_hook = "0.1"
+js-sys = "0.3"
+web-sys = { version = "0.3", features = [
+    "Window",
+    "Request",
+    "RequestInit",
+    "RequestMode",
+    "Response",
+    "Headers",
+] }
 
 # Internal crates
 kraken-types = { path = "crates/kraken-types" }
 kraken-book = { path = "crates/kraken-book" }
 kraken-ws = { path = "crates/kraken-ws" }
-kraken-rest = { path = "crates/kraken-rest" }
+kraken-auth = { path = "crates/kraken-auth" }
 kraken-futures-ws = { path = "crates/kraken-futures-ws" }
 kraken-sdk = { path = "crates/kraken-sdk" }
 
