--- a/crates/kraken-sdk/Cargo.toml
+++ b/crates/kraken-sdk/Cargo.toml
@@ -9,7 +9,7 @@ description = "High-level SDK for Kraken WebSocket API v2"
 [features]
 default = []
 metrics = ["prometheus", "lazy_static"]
-auth = ["reqwest", "hmac", "sha2", "base64", "parking_lot"]
+auth = ["reqwest", "hmac", "sha2", "base64", "parking_lot", "secrecy"]
 
 [dependencies]
 kraken-types = { workspace = true }
@@ -20,6 +20,7 @@ futures = { workspace = true }
 typed-builder = { workspace = true }
 tracing = { workspace = true }
 rust_decimal = { workspace = true }
+rust_decimal_macros = { workspace = true }
 dashmap = { workspace = true }
 thiserror = { workspace = true }
 serde = { workspace = true }
@@ -34,11 +35,12 @@ hmac = { version = "0.12", optional = true }
 sha2 = { version = "0.10", optional = true }
 base64 = { version = "0.22", optional = true }
 parking_lot = { version = "0.12", optional = true }
+secrecy = { version = "0.10", optional = true }
 
 [dev-dependencies]
 tracing-subscriber = { workspace = true }
 rust_decimal_macros = { workspace = true }
-kraken-rest = { path = "../kraken-rest" }
+kraken-auth = { path = "../kraken-auth" }
 kraken-futures-ws = { path = "../kraken-futures-ws" }
 
 [[example]]
@@ -52,9 +54,6 @@ name = "multi_symbol"
 
 [[example]]
 name = "advanced_reconnect"
-
-[[example]]
-name = "rest_trading"
 
 [[example]]
 name = "futures_stream"
