--- a/crates/kraken-wasm/Cargo.toml
+++ b/crates/kraken-wasm/Cargo.toml
@@ -13,10 +13,14 @@ crate-type = ["cdylib", "rlib"]
 kraken-book = { workspace = true }
 kraken-types = { workspace = true }
 wasm-bindgen = { workspace = true }
+wasm-bindgen-futures = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 serde-wasm-bindgen = { workspace = true }
 console_error_panic_hook = { workspace = true }
 rust_decimal = { workspace = true }
+js-sys = { workspace = true }
+web-sys = { workspace = true }
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ["-O3"]
