--- a/crates/kraken-ws/Cargo.toml
+++ b/crates/kraken-ws/Cargo.toml
@@ -6,6 +6,11 @@ license.workspace = true
 authors.workspace = true
 description = "Native WebSocket client for Kraken API v2"
 
+[features]
+default = []
+# Enable test utilities (MockTransport)
+test-utils = []
+
 [dependencies]
 kraken-types = { workspace = true }
 kraken-book = { workspace = true }
@@ -13,6 +18,7 @@ tokio = { workspace = true }
 tokio-tungstenite = { workspace = true }
 futures = { workspace = true }
 futures-util = { workspace = true }
+async-trait = { workspace = true }
 tracing = { workspace = true }
 dashmap = { workspace = true }
 parking_lot = { workspace = true }
@@ -20,3 +26,6 @@ rand = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
+chrono = { workspace = true }
+rust_decimal = { workspace = true }
+rust_decimal_macros = { workspace = true }
