Add 10 showcase demo applications
Comprehensive demos highlighting SDK capabilities:
- spread_monitor: Sub-microsecond orderbook performance
- multi_symbol: Multi-pair dashboard with divergence tracking
- vwap_calculator: VWAP slippage analysis for order sizing
- queue_position: L3 queue position for market makers
- checksum_monitor: CRC32 checksum integrity validation
- reconnect_demo: Circuit breaker and auto-reconnect
- funding_rates: Futures perpetual funding rate monitor
- imbalance_analyzer: Bid/ask volume imbalance signals
- price_alerts: Event-driven price alert system
- depth_chart: ASCII orderbook visualization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "crates/kraken-futures-ws",
     "crates/kraken-sdk",
     "crates/kraken-wasm",
+    "demos",
 ]
 
 [workspace.package]
