Fix clippy warnings, add ARCHITECTURE.md, update GitHub URLs
- Fix clippy errors in auth.rs, metrics.rs, demos, TUI
- Add comprehensive ARCHITECTURE.md documenting crate structure
- Update repository URLs to github.com/hitakshiA/Havklo_sdk
- Fix CHANGELOG links
- All clippy and tests passing

Co-Authored-By: Hitakshi Arora <hitakshiarora@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT"
 authors = ["Hitakshi Arora"]
-repository = "https://github.com/havklo/havklo-sdk"
+repository = "https://github.com/hitakshiA/Havklo_sdk"
 description = "Production-grade Rust SDK for Kraken's WebSocket API v2"
 
 [workspace.dependencies]
