Prepare v0.1.0 for release
- Add repository.workspace to all crates for crates.io
- Fix havklo-tui author attribution
- Add Dockerfile and docker-compose.yml
- Fix CONTRIBUTING.md clone URL
- Configure npm package as @havklo/kraken-wasm

--- a/crates/kraken-sdk/Cargo.toml
+++ b/crates/kraken-sdk/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 authors.workspace = true
+repository.workspace = true
 description = "High-level SDK for Kraken WebSocket API v2"
 
 [features]
