--- a/crates/kraken-ws/Cargo.toml
+++ b/crates/kraken-ws/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 authors.workspace = true
+repository.workspace = true
 description = "Native WebSocket client for Kraken API v2"
 
 [features]
